# TestC

./: CMakeLists.txt  README.md  main.c
cmake/: FindSDL2.cmake  FindSDL_net.cmake
